# gpu-voxel-raytracer

./: Cargo.toml  README.md  build.sh
blog/: 2020-03-24-intro.html  2020-03-24-intro.md  2020-03-25-octree.html  2020-03-25-octree.md  2020-03-26-ray-tracing.html  2020-03-26-ray-tracing.md  build.sh
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  denoise.comp  denoise.comp.spv  display.frag  display.frag.spv  gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  temporal.comp  temporal.comp.spv  voxels.comp  voxels.comp.spv
src/: camera.rs  color.rs  context.rs  cpu.rs  linear.rs  macros.rs  main.rs  scancodes.rs  vox.rs
src/context/: buffer.rs  macros.rs  shader.rs  util.rs
src/cpu/: octree.rs
vox/: 3x3x3.vox  custom.vox
