[package]
name = "voxel"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
bytemuck = { version = "1.5.1", features = ["extern_crate_alloc", "derive"] }
image = "0.23.14"
notify = "4.0.15"
pollster = "0.2.2"
rand = "0.8.3"
rayon = "1.5.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
wgpu = "0.7.0"
winit = "0.24.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
split-debuginfo = "unpacked"
